@@ -28,6 +28,8 @@
         added tests for compilation of binaries
         fixed compilation error in addons/convertToPortSecurity.pl
           (http://www.packetfence.org/mantis/view.php?id=624)
+        fixed list of dashboard widgets
+          (http://www.packetfence.org/mantis/view.php?id=625)
 
 1.8.1
         authorized @ as first symbol in password
